# texter

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  ci.sh  release-plz.toml
.github/workflows/: cargo_test.yml  crates_release.yml  rust.yml
benches/: main.rs  sample_file.txt  text.rs  text_lines.rs
examples/simple-text-edit/: README.md  cursor.rs  main.rs
src/: change.rs  error.rs  lib.rs  querier.rs  text.rs  to_grid_index.rs  updateables.rs  utils.rs
src/actions/: mod.rs
src/core/: br_indexes.rs  encodings.rs  eol_indexes.rs  lines.rs  mod.rs  text.rs
src/texter/: br_indexes.rs  encodings.rs  mod.rs  text.rs
src/utils/: mod.rs  string_ext.rs
