[package]
name = "texter"
version = "0.1.0"
edition = "2021"

[dependencies]
memchr = "2.7.4"
lsp-types = { version = "0.97.0", optional = true }
tree-sitter = { version = "0.24.3", optional = true }
tracing = "0.1.40"

[dev-dependencies]
tree-sitter-html = "0.23.0"
rstest = "0.23.0"
criterion = { version = "0.5", features = ["html_reports"] }
ratatui = "0.29.0"
tree-sitter = { version = "0.24.4" }
tree-sitter-rust = { version = "0.23.1" }
streaming-iterator = { version = "0.1.9" }
rand = { version = "0.8.5" }

[features]
default = []
tree-sitter = ["dep:tree-sitter"]
lsp-types = ["dep:lsp-types"]

[[bench]]
name = "main"
harness = false

[[example]]
name = "simple-text-edit"
path = "examples/simple-text-edit/main.rs"
required-features = ["tree-sitter"]
