[package]
name = "texter"
version = "0.1.0"
edition = "2021"

[dependencies]
memchr = "2.7.4"
lsp-types = { version = "0.97.0", optional = true }
tree-sitter = { version = "0.24.3", optional = true }
tracing = "0.1.40"

[dev-dependencies]
tree-sitter-html = "0.23.2"
rstest = "0.23.0"
criterion = { version = "0.5.1", features = ["html_reports"] }

[features]
default = []
tree-sitter = ["dep:tree-sitter"]
lsp-types = ["dep:lsp-types"]

[[bench]]
name = "main"
harness = false
