[package]
name = "texter"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["lsp", "tree-sitter", "string", "editor", "ts"]
description = "A library that simplifies writing an LSP with tree-sitter"
readme = "README.md"
repository = "https://github.com/airblast-dev/texter"
authors = ["Tayfun Bocek <tayfunbocek@live.ca>"]

[dependencies]
memchr = "2.7.4"
lsp-types = { version = "0.97.0", optional = true }
tree-sitter = { version = "0.24.3", optional = true }
tracing = "0.1.40"

[dev-dependencies]
tree-sitter-html = "0.23.2"
rstest = "0.23.0"
criterion = { version = "0.5.1", features = ["html_reports"] }

[features]
default = []
tree-sitter = ["dep:tree-sitter"]
lsp-types = ["dep:lsp-types"]

[[bench]]
name = "main"
harness = false

[profile.release]
codegen-units = 1
lto = "fat"
